# commutator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
client-server/: CMakeLists.txt  CMakeSettings.json  main.cpp
client-server/network/cnp/: CnpException.cpp  CnpException.h  ServerException.cpp  ServerException.h
client-server/network/cnp/message/: CnpMessage.cpp  CnpMessage.h  CnpRequest.cpp  CnpRequest.h  CnpResponse.cpp  CnpResponse.h  CnpStatus.h  CnpVersions.h
client-server/network/cnp/tcp/: TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h
client-server/network/cnp/udp/: UdpClient.cpp  UdpClient.h  UdpServer.cpp  UdpServer.h
client-server/network/sockets/: Socket.cpp  Socket.h  SocketException.cpp  SocketException.h
client-server/network/sockets/platform/: SocketPlatform.h
client-server/network/sockets/tcp/: TcpClientSocket.cpp  TcpClientSocket.h  TcpServerSocket.cpp  TcpServerSocket.h  TcpSocket.cpp  TcpSocket.h
client-server/network/sockets/udp/: UdpClientSocket.h  UdpServerSocket.cpp  UdpServerSocket.h  UdpSocket.cpp  UdpSocket.h
client/udp/: UdpClient.h
network/: Socket.h  SocketException.h
network/client/udp/: UdpClient.h
network/cnp/: CnpException.cpp  CnpException.h  CnpProtocol.cpp  CnpProtocol.h  CnpStatuses.h
network/cnp/client/udp/: UdpClient.cpp  UdpClient.h
network/cnp/message/: CnpMessage.cpp  CnpMessage.h  CnpRequest.cpp  CnpRequest.h  CnpResponse.cpp  CnpResponse.h  CnpStatus.h  CnpVersions.h
network/cnp/server/: ServerCommandConstants.h  ServerException.cpp  ServerException.h
network/cnp/server/udp/: UdpServer.cpp  UdpServer.h
network/server/: ServerException.h
network/server/udp/: UdpServer.h
network/sockets/: Socket.cpp  Socket.h  SocketException.cpp  SocketException.h
network/sockets/platform/: SocketPlatform.h
network/sockets/tcp/: TcpClientSocket.cpp  TcpClientSocket.h  TcpServerSocket.cpp  TcpServerSocket.h  TcpSocket.cpp  TcpSocket.h
network/sockets/udp/: UdpClientSocket.cpp  UdpClientSocket.h  UdpServerSocket.cpp  UdpServerSocket.h  UdpSocket.cpp  UdpSocket.h
network/tcp/: TcpClientSocket.h  TcpServerSocket.h  TcpSocket.h
network/udp/: UdpClientSocket.h  UdpServerSocket.h  UdpSocket.h
server/udp/: UdpServer.h
